JLife v.1.12.2 

Add new Zlife type Zetatron uses a Neural Network to change state;
Add Zetatron max number in preferences
add save and load dialog into AddNewCell frame to save or load dna;
add save dialog into showZlife frame to save Zlife's Dna
add AlwaysOnTop on to Charts dialog
fix LoadXML bug into Dna.java class
fix zetatron weights
fix zetatron think state
fix reproduction: now the energy is subtract after the new cell is created!
fix showZlife frame too slow, now refresh only if zlife's state change
fix loadXML into Dna.java class, can't load DnaParam in root element
Change icons and statisic panel layout
Add DnaPanel to show Zlife's Dna in a JTree ML link to JSimLife homepage;
Add message on click on seed showing the actual seed's quantity!
Reorder and Comment Code

JLife v.1.12 MILESTONE
Add JLifeToolbar as a iconed JToolbar;
Remove JLifeLeftControlPanel;
BottomPanel show now only the cell count number;
Zlife and Zretador class has now a short friendly description;
JFrameNewCell show a short summary of the selected Zlife's type;
Add a preferences Frame to save and set some JSimLife's parameter;
Add the Step feature;
Fix a lot of small bug.


JLife v.1.11.1
Bufix JLife setEnergy

JLife v.1.11 MILESTONE
Reorder Code
Zlifes changes direction when collide if scary
Fix Bug: Statistic show now right values of a Loaded Game
Change initial Zlifes param into add New Cell dialog to improve user's experience


JLife v.1.10.3
Add JFrame icon to JFrameStatistic and JFrameNewCell
The JFrameStatistic now show several chart choosed using a JComboBox
Using JCharts2D library;
Now Statistic auto update info into JRightControlPanel using a Timer; 
Add a JFrameStatistic class to draw chart; 
Add a statistic package;


JLife v.1.10.2
Zlife spend more energy if faster!
Zredator eating now not necessary killing zlife!!

JLife v.0.1.10.1
JLifeStatistic add Subtotal
JLifeStatistic fix bug

JLife v.0.1.10