@@ -1,6 +1,6 @@
 README
 
-JSimLife v.0.1.12.1
+JSimLife v.0.1.13
 
 #1 How run this Application
 #2 User Guide
@@ -12,10 +12,10 @@ To run this application you need the Java Runtime Enviroment (JRE) v.6. You can 
 Java is a cross platform language, so you can run this software in every system with JRE.
 
 	Microsoft Windows
- If you are on Windows, just extract in a directory the JSimLifeV0.1.12.1.jar and JSimLife_WindowsLauncher.bat file. If double-click on the jar file doesn't work, click on to .bat file. 
+ If you are on Windows, just extract in a directory the JSimLifeV0.1.13.jar and JSimLife_WindowsLauncher.bat file. If double-click on the jar file doesn't work, click on to .bat file. 
 
 	Linux/MacOs
-If  Java Runtime Enviroment (JRE) is already installed on your machine simply extract JSimLifeV0.1.12.1.jar file in a directory and double clicking on the jar file.
+If  Java Runtime Enviroment (JRE) is already installed on your machine simply extract JSimLifeV0.1.13.jar file in a directory and double clicking on the jar file.
 
 
 #2 USER GUIDE
@@ -61,6 +61,8 @@ You can save and load simulation, but remember that the maximum number of ZLife'
 You can watch in real time how evolves Game's parameter using the "CHART" button.
 You can edit some Game parameters as the background color of playfield, or the playfield dimension by clicking on the preference item in JSimLife menu.
 
+The new Zlife's type Zetatron is a Zretador's predator. It uses a neural network with 8 neurons to select its own current state.
+Zetatron's dna is greater than zlife's one couse I've adding the neuron's weights as a genes in order to allows the Zetatron brain's evolution!
 
 #3 Developers
 An help should be great!!! So, read the ToDo wiki at http://code.google.com/p/jsimlife/wiki/ToDo for the future feature I want to implements!
@@ -69,4 +71,5 @@ If you want you can download the source code at http://code.google.com/p/jsimlif
 N.B. This game use a JDOM library: youu need to import it in your project if you want recompile it!
 
 #4 About
-JSimLife is currently at version 0.1.12.1 BETA, is developed by tabuto83 under MIT license. 
+JSimLife is currently at version 0.1.13 BETA, is developed by tabuto83 under MIT license. 
+Visit JSimLife's Home Page at: http://www.jsimlife.netsons.org/
