@@ -1,3 +1,3 @@
 Manifest-Version: 1.0
-Main-Class: com.tabuto.jlife.gui.Main
+Main-Class: com.tabuto.test.j2dgf.Test
 
